--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -13,6 +13,26 @@ body {
   margin-bottom: 60px;
 }
 
+.img-valign {
+  vertical-align: middle;
+  margin-bottom: 0.25em;
+}
+
+/* https://codersblock.com/blog/creating-glow-effects-with-css/ */
+.bio-glow {
+  /* border-radius: 50%;
+  box-shadow:
+    inset 0 0 50px #fff,
+    inset 20px 0 80px #f0f,
+    inset -20px 0 80px #0ff,
+    inset 20px 0 300px #f0f,
+    inset -20px 0 300px #0ff,
+    0 0 50px #fff,
+    -10px 0 80px #f0f,
+    10px 0 80px #0ff; */
+    box-shadow: 0px 0px 15px 5px rgba(93, 139, 236, 0);
+}
+
 .footer {
   bottom: 0;
   width: 100%;
