--- a/css/full_video.css
+++ b/css/full_video.css
@@ -15,10 +15,11 @@ video#bgvid {
     background-size: cover;
 }
 
-.lattice {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40%;
-    height: 40%;
+
+ .lattice{
+    margin: auto;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    width: 75%;
+    height: 75%;
  }
